istio_config_parser/istio_monitor/istio_control_config/destinationrules/online-boutique/adservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"networking.istio.io/v1alpha3","kind":"DestinationRule","metadata":{"annotations":{},"name":"adservice","namespace":"online-boutique"},"spec":{"host":"adservice","subsets":[{"labels":{"version":"v1"},"name":"v1"},{"labels":{"version":"v2"},"name":"v2"}]}}

      '
  creationTimestamp: '2025-03-27T05:17:35Z'
  generation: 1
  managedFields:
  - apiVersion: networking.istio.io/v1alpha3
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
      f:spec:
        .: {}
        f:host: {}
        f:subsets: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: '2025-03-27T05:17:35Z'
  name: adservice
  namespace: online-boutique
  resourceVersion: '1436429'
  uid: a8a5191d-1dcc-4381-af3b-85d9aebbfcf2
spec:
  host: adservice
  subsets:
  - labels:
      version: v1
    name: v1
  - labels:
      version: v2
    name: v2
