istio_config_parser/istio_monitor/istio_control_config/destinationrules/online-boutique/frontend.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"networking.istio.io/v1alpha3","kind":"DestinationRule","metadata":{"annotations":{},"name":"frontend","namespace":"online-boutique"},"spec":{"host":"frontend.online-boutique.svc.cluster.local","subsets":[{"labels":{"version":"original"},"name":"original"},{"labels":{"version":"1.0.0"},"name":"v1"}]}}

      '
  creationTimestamp: '2025-03-19T09:08:24Z'
  generation: 1
  managedFields:
  - apiVersion: networking.istio.io/v1alpha3
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
      f:spec:
        .: {}
        f:host: {}
        f:subsets: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: '2025-03-19T09:08:24Z'
  name: frontend
  namespace: online-boutique
  resourceVersion: '1272261'
  uid: 87ca8cc1-5c11-47c7-9250-7649e16dc73c
spec:
  host: frontend.online-boutique.svc.cluster.local
  subsets:
  - labels:
      version: original
    name: original
  - labels:
      version: 1.0.0
    name: v1
